// Vitest Snapshot v1

exports[`Slider > :props >  1`] = `
<div
  aria-valuetext="0"
  class="t-slider__container"
>
  <div
    aria-orientation="horizontal"
    aria-valuemax="100"
    aria-valuemin="0"
    class="t-slider"
    role="slider"
  >
    <div
      class="t-slider__rail"
    >
      <div
        class="t-slider__track"
        style="width: 0%; left: 0%;"
      />
      <div
        class="t-slider__button-wrapper"
        show-tooltip="true"
        style="left: 0%;"
        tabindex="0"
      >
        <div
          class="t-slider__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider [marks] > render right 1`] = `
<div
  aria-valuetext="2"
  class="t-slider__container"
>
  <div
    aria-orientation="horizontal"
    aria-valuemax="100"
    aria-valuemin="0"
    class="t-slider t-slider--with-input"
    role="slider"
  >
    <div
      class="t-slider__rail show-input"
    >
      <div
        class="t-slider__track"
        style="width: 2%; left: 0%;"
      />
      <div
        class="t-slider__button-wrapper"
        show-tooltip="true"
        style="left: 2%;"
        tabindex="0"
      >
        <div
          class="t-slider__button"
        />
      </div>
      <div>
        <div
          class="t-slider__stops"
        >
          <div
            class="t-slider__stop t-slider__mark-stop"
            style="left: 8%;"
          />
          <div
            class="t-slider__stop t-slider__mark-stop"
            style="left: 12%;"
          />
          <div
            class="t-slider__stop t-slider__mark-stop"
            style="left: 37%;"
          />
        </div>
        <div
          class="t-slider__mark"
        >
          <div
            class="t-slider__mark-text"
            style="left: 0%;"
          >
            0°C
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 8%;"
          >
            8°C
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 12%;"
          >
            12°C
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 37%;"
          >
            37°C
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-slider__input-container"
  >
    <div
      class="t-input-number t-size-m t-is-controls-right t-input-number--column t-slider__input"
    >
      <button
        class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
        type="button"
      >
        <svg
          class="t-icon t-icon-chevron-down t-size-m"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input"
        >
          <input
            autocomplete="off"
            class="t-input__inner"
            placeholder=""
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <button
        class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
        type="button"
      >
        <svg
          class="t-icon t-icon-chevron-up t-size-m"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.5 15.91l-5.5-5.5-5.5 5.5-1.41-1.41L12 7.59l6.91 6.91-1.41 1.41z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Slider [vertical-marks] > render right 1`] = `
<div
  aria-valuetext="30-70"
  class="t-slider__container is-vertical"
>
  <div
    aria-orientation="vertical"
    aria-valuemax="100"
    aria-valuemin="0"
    class="t-slider is-vertical t-slider--vertical"
    role="slider"
  >
    <div
      class="t-slider__rail"
      style="height: 100%;"
    >
      <div
        class="t-slider__track"
        style="height: 40%; bottom: 30%;"
      />
      <div
        class="t-slider__button-wrapper"
        show-tooltip="true"
        style="bottom: 30%;"
        tabindex="0"
      >
        <div
          class="t-slider__button"
        />
      </div>
      <div
        class="t-slider__button-wrapper"
        show-tooltip="true"
        style="bottom: 70%;"
        tabindex="0"
      >
        <div
          class="t-slider__button"
        />
      </div>
      <div>
        <div
          class="t-slider__stops"
        >
          <div
            class="t-slider__stop t-slider__mark-stop"
            style="top: calc(92% - 1px);"
          />
          <div
            class="t-slider__stop t-slider__mark-stop"
            style="top: calc(88% - 1px);"
          />
          <div
            class="t-slider__stop t-slider__mark-stop"
            style="top: calc(63% - 1px);"
          />
        </div>
        <div
          class="t-slider__mark"
        >
          <div
            class="t-slider__mark-text"
            style="top: calc(100% - 1px);"
          >
            0°C
          </div>
          <div
            class="t-slider__mark-text"
            style="top: calc(92% - 1px);"
          >
            8°C
          </div>
          <div
            class="t-slider__mark-text"
            style="top: calc(88% - 1px);"
          >
            12°C
          </div>
          <div
            class="t-slider__mark-text"
            style="top: calc(63% - 1px);"
          >
            37°C
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
